--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     />
     <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap" 
-    rel="stylesheet">
-    />
+    rel="stylesheet"/>
     <style>
       * {
         padding: 0;
